tests/core/snapshots/add-field-many.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Foo
@addField(name: "a", path: ["x", "a"])
@addField(name: "b", path: ["x", "b"])
@addField(name: "c", path: ["x", "c"]) {
  name: String
  x: X
}

type Query {
  user: Foo @http(url: "http://jsonplaceholder.typicode.com/users/1")
}

type X {
  a: String
  b: String
  c: String
}
