tests/core/snapshots/add-field-with-composition.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Address {
  geo: Geo
  street: String
}

type Geo {
  lat: String
  lng: String
}

type Query
@addField(name: "lat", path: ["user", "address", "geo", "lat"])
@addField(name: "lng", path: ["user", "address", "geo", "lng"]) {
  user: User @http(url: "http://jsonplaceholder.typicode.com/users/1")
}

type User {
  address: Address
}
