tests/core/snapshots/add-field-with-modify.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query
@addField(name: "user1", path: ["person1", "name"])
@addField(name: "user2", path: ["person2", "name"]) {
  person1: User @http(url: "http://jsonplaceholder.typicode.com/users/1")
  person2: User @http(url: "http://jsonplaceholder.typicode.com/users/2")
}

type User {
  name: String
}
