tests/core/snapshots/async-cache-inflight-request.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(port: 8000, queryValidation: false)
@upstream
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  user: User
  @http(
    url: "http://jsonplaceholder.typicode.com/users/{{.value.userId}}"
    dedupe: true
  )
  userId: Int!
}

type Query {
  posts: [Post]
  @http(url: "http://jsonplaceholder.typicode.com/posts?id=1", dedupe: true)
}

type User {
  id: Int
  name: String
}
